--- a/express-intro/package.json
+++ b/express-intro/package.json
@@ -4,12 +4,14 @@
   "description": "A brief description of express",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.js"
   },
   "author": "Ayobami Owoeye",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^5.13.16",
     "morgan": "^1.10.0"
   }
 }
